[package]
name = "cortex"
version = "0.1.0"
authors = ["Dmitry Kashitsyn <korvin@deeptown.org>"]

[dependencies]
dft = "0.5.3"
bit-vec = "0.4.3"
num-traits = "0.1"
clap = "2.19.3"
hound = "3.0.0"
itertools = "0.5.8"
sample = "0.6.2"
serde = "0.9"
serde_derive = "0.9"
bincode = "1.0.0-alpha5"
rayon = "0.7"

[dependencies.num-complex]
version = "0.1.36"
#features = ["serde"]
